--- a/src/index.css
+++ b/src/index.css
@@ -711,5 +711,4 @@ body {
   .app-sidebar-link {
     @apply text-muted-foreground my-4 transition-all duration-200 rounded-full flex-shrink-0 w-10 h-10 flex justify-center items-center hover:bg-accent hover:text-foreground;
   }
-
-  
+}
